style.css
/* ... */
.qr-below {
  width: 600px;
  margin-top: 1.5rem;
}

.parent-director {
  padding-top: 3rem;
  height: 60vh;
  background-color: rgb(228, 224, 220);
}

.Directory {
  font-size: 2.3rem;
  text-align: center;
  margin-bottom: 2rem;
}

.Aligning {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  text-align: center;
}

.President-Info {
  height: 90vh;
  background-color: #233857;
  display: flex;
  gap: 2rem;
  justify-content: center;
  color: white;
  align-items: center;
}

.President-Image{
  width: 350px;
  height: 480px;
  border-radius: 15px;
}

.President-heading {
  margin-bottom: 1rem;
}

.President-para {
  width: 600px;
  margin-bottom: 2rem;
  letter-spacing: 2px;
}

.President-name {
  margin-bottom: 1rem;
}

.General-Security {
  background-color: white;
  height: 90vh;
  display: flex;
  gap: 2rem;
  justify-content: center;
  align-items: center;
}

.General-Security-image {
  width: 400px;
  height: 400px;
  border-radius: 15px;
}

.pres {
  background-color: white;
  width: 400px;
  padding: 40px;
  border-radius: 15px;
  transition: 1s ease;
}

.pres:hover {
  background-color: black;
  color: white;
}

.pres .pres-para:hover {
  color: white;
}

.Checking {
  color: red;
}

.pres-para {
  margin-bottom: 0.50rem;
}

.some-thing {
  margin-bottom: 1rem;
}

.Handle-everything {
  height: 35vh;
  display: flex;
  justify-content: center;
  background-image: linear-gradient(to bottom right, #305170, #6DFC6B);
  color: white;
  align-items: center;
  gap: 4rem;
}

.items {
  color: white;
  text-decoration: none;
}

.links {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.link-items {
  list-style: none;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  gap: 0.45rem;
}

.link-items li a:hover {
  color: rgb(113, 113, 161);
}

.members {
  text-align: center;
  background-color: rgb(69, 143, 69);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  padding-top: 4rem;
  padding-bottom: 4rem;
 color: white;
}

.member-images {
  width: 200px;
  height: 200px;
  margin: auto;
  border-radius: 100px;
  padding-top: 1rem;
}

.member-details{
  width: 350px;
  height: 330px;
  background-color: rgb(228, 224, 220);
  color: black;
  margin-top: 3rem;
  border-radius: 15px;
}

.sub-member-details {
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   gap: 10px;
   color: black;
}

.other-member-details {
    width: 350px;
  height: 330px;
  background-color: rgb(228, 224, 220);
  border-radius: 15px;
}

.main-other-member {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2rem;
  margin-bottom: 7rem;
}

.main-member-section {
    display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 2rem;
}

.Mission-parent-cont {
  padding-top: 4rem;
  padding-bottom: 4rem;
  text-align: center;
   background-color: rgb(69, 143, 69);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  color: white;
}

@media screen and (max-width: 768px) {
  .hamburger-menu {
    display: block;
    cursor: pointer;
  }

  .hamburger-menu.active .bar:nth-child(2) {
    opacity: 0;
  }

  .hamburger-menu.active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger-menu.active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }

  .list-items {
    position: fixed;
    left: -100%;
    top: 70px;
    z-index: 2;
    padding-bottom: 2rem;
    gap: 0;
    flex-direction: column;
    background-image: linear-gradient(to bottom right, #305170, #6DFC6B);
    width: 100%;
    align-items: center;
    transition: 0.3s;
  }

  .nav-item {
    margin: 15px 0;
  }

  .list-items.active {
    left: 0;
  }
}

.fa-rocket {
  font-size: 6rem;
  color: rgb(69, 143, 69);
}

.fa-eye {
  font-size: 6rem;
  color: rgb(69, 143, 69);
}

.mission-divion {
   margin-top: 3rem;
    width: 500px;
  height: 350px;
    border-radius: 15px;
  background-color: white;
  display: flex;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}

.handeling-mission {
  height: 100vh;
  gap: 4rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

.mission-heading {
  padding-top: 1rem;
  padding-bottom: 0.45rem;
}

.gallery{
  padding-top: 4rem;
  padding-bottom: 4rem;
  text-align: center;
    background-color: rgb(69, 143, 69);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  color: white;
}

.parent-gallery {
  height: 250px;
  width: 300px;
  border-radius: 15px; 
}

.grand-parent {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 10px;
  margin-top: 1rem;
  margin-bottom: 3rem;
}

.gallery-images {
    height: 250px;
  width: 300px;
  border-radius: 15px;
  background-size: cover;
  background-position: center;
  object-fit: cover;

}

.clildren-gallery {
  margin-top: 1rem;
}
/* ... */

